# fastapi_practice

./: pyproject.toml
app/: main.py
