[tool.poetry]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = ["fuku2929 <sano.yuka.86s@st.kyoto-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
email-validator = "^2.2.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
